--- a/publiccode.yml
+++ b/publiccode.yml
@@ -45,7 +45,7 @@ description:
 
       Questo progetto è un componente del progetto più ampio di un gruppo
 
-      di micro servizi mirati all'integrazione con U-GOV, e possibile attivarli
+      di micro servizi mirati all'integrazione con U-GOV, è possibile attivarli
 
       singolarmente in modo modulare, e attivarne molteplici in modo scalare in
       caso di necessità
