--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-APP_NAME="UgovWs API Persona"
-APP_DESC="ugovWs Integrazione Servizi UGOV"
+APP_NAME="API Integrazione UGOV WSACPersonaFisica"
+APP_DESC="API di integrazione dei service SOAP WSACPersonaFisica di UGOV"
 APP_VERSION="1.0.0"
 BASE_URL_WS=""
 JWT_SECRET=""
