[IMP] Add response model in Api Path [IMP] service class [ADD] handle request for gruppiPersona and profiliPersona SOAP service

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 APP_NAME="API Integrazione UGOV WSACPersonaFisica"
 APP_DESC="API di integrazione dei service SOAP WSACPersonaFisica di UGOV"
-APP_VERSION="1.0.0"
+APP_VERSION=""
 BASE_URL_WS=""
 JWT_SECRET=""
-JWT_ALG=""
+JWT_ALG="HS256"
 JWT_EXPIRE_MINUTE=0
