--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
     image: python3.8.ugovws
     volumes:
       - ./app:/app
+      - .env:/app/.env
     environment:
       - WEB_CONCURRENCY=3
     ports:
@@ -22,9 +23,9 @@ services:
     build:
       context: .
       network: host
-    image: python3.8.ugovws
     volumes:
       - ./app:/app
+      - .env-test:/app/.env
     environment:
       - WEB_CONCURRENCY=1
     ports:
