--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,7 @@ services:
     build:
       context: .
       network: host
+    image: python3.8.ugovws
     volumes:
       - ./app:/app
       - .env-test:/app/.env
