--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       context: .
       network: host
     image: python3.8.ugovws-api-pf
+    network_mode: host
     volumes:
       - ./app:/app
       - .env:/app/.env
@@ -24,6 +25,7 @@ services:
       context: .
       network: host
     image: python3.8.ugovws-api-pf_test
+    network_mode: host
     volumes:
       - ./app:/app
       - .env-test:/app/.env
