--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       context: .
       network: host
     image: python3.8.ugovws-api-pf
-    network_mode: "host"
+    network_mode: "bridge"
     volumes:
       - ./app:/app
       - .env:/app/.env
@@ -26,7 +26,7 @@ services:
       context: .
       network: host
     image: python3.8.ugovws-api-pf_test
-    network_mode: "host"
+    network_mode: "bridge"
     volumes:
       - ./app:/app
       - .env-test:/app/.env
