--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       context: .
       network: host
     image: python3.11.ugovws-api-pf
-    network_mode: "host"
+#    network_mode: "host"
     volumes:
       - ./app:/app
       - .env:/app/.env
@@ -18,19 +18,19 @@ services:
     restart: 'always'
 
 
-  test-ugovws-pf:
-    tty: true
-    build:
-      context: .
-      network: host
-    image: python3.11.ugovws-api-pf_test
-#    network_mode: "host"
-    volumes:
-      - ./app:/app
-      - .env-test:/app/.env
-    environment:
-      - WEB_CONCURRENCY=1
-      - PORT=9022
-    ports:
-      - "9022:9022"
-    restart: 'always'
+#  test-ugovws-pf:
+#    tty: true
+#    build:
+#      context: .
+#      network: host
+#    image: python3.11.ugovws-api-pf_test
+##    network_mode: "host"
+#    volumes:
+#      - ./app:/app
+#      - .env-test:/app/.env
+#    environment:
+#      - WEB_CONCURRENCY=1
+#      - PORT=9022
+#    ports:
+#      - "9022:9022"
+#    restart: 'always'
