--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       context: .
       network: host
     image: python3.11.ugovws-api-pf
-#    network_mode: "host"
+    network_mode: "host"
     volumes:
       - ./app:/app
       - .env:/app/.env
